--- a/components/footer.css
+++ b/components/footer.css
@@ -1,12 +1,7 @@
 @import "./styles.css";
 
-.footer {
-  margin: 0;
+footer {
   padding: 12px 20px;
   display: flex;
   justify-content: space-between;
-  flex: 0;
-  /*  position: fixed;
-  bottom: 12px;
-  width: 100%; */
 }
