--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 @import "./components/footer.css";
 @import "./components/header.css";
+@import "./components/main.css";
 
 /* -------------------------------------------------------- */
 /* Global Styles */
@@ -12,11 +13,10 @@
 }
 
 body {
-  margin-top: 12px;
   display: flex;
   flex-direction: column;
-  margin: 0px 20px 12px 0px;
   height: 100vh;
+  margin: 0;
 }
 
 :root {
