--- a/components/card.css
+++ b/components/card.css
@@ -1,39 +1,50 @@
 @import "./styles.css";
 
 .card {
-  margin: 20px 10%;
-  border: 2px solid var(--color-primary);
-  padding: 3% 10%;
+  margin: 20px 30px;
+  padding: 3% 20px;
   scroll-margin-top: 100px;
-  border-radius: 12px;
+  border-radius: 20px;
   position: relative;
-  background-color: #f8e7f6;
+  background-color: #ebff57;
 }
 
 .cta_button {
-  background-color: var(--color-primary);
-  color: var(--color-bg);
-  display: inline-block;
-  padding: 4px 8px 4px 8px;
-  border-radius: 8px;
+  background-color: #000000;
+  color: #ebff57;
+  padding: 10px 20px 10px 20px;
+  border-style: none;
+  border-radius: 32px;
   text-align: center;
+  font-size: 16px;
+  font-weight: normal;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
 }
 
 .card_bookmark {
+  background-color: #d4e64e;
   border: 2px solid var(--color-primary);
-  font-size: 2em;
-  padding: 6px 12px;
-  border-radius: 12px;
+  padding: 10px 12px;
+  border-radius: 60px;
   position: absolute;
   top: -25px;
   right: 10px;
 }
 
 .tags {
-  background-color: var(--color-primary);
-  color: var(--color-bg);
+  background-color: #d4e64e;
+  color: #000000;
   display: inline-block;
-  padding: 4px 8px 4px 8px;
+  padding: 8px 12px 8px 12px;
   border-radius: 8px;
   text-align: center;
+  font-size: 11px;
+  font-weight: 500;
+}
+
+p {
+  background-color: #ebff57;
+  color: #454c1a;
 }
