--- a/components/footer.css
+++ b/components/footer.css
@@ -2,13 +2,15 @@
 
 footer {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
+  align-self: center;
   position: fixed;
   bottom: 0px;
   width: 100%;
-  box-shadow: rgba(0, 0, 0, 0.24) 0 3px 8px;
+  box-shadow: rgba(0, 0, 0, 0.2) 0 3px 8px;
   padding-top: 15px;
-  padding-left: 40px;
-  padding-right: 40px;
+  padding-left: 20px;
+  padding-right: 20px;
   padding-bottom: 15px;
+  background-color: var(--color-bg);
 }
