--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,38 @@
 @import "./components/footer.css";
 @import "./components/header.css";
-@import "./components/main.css";
+@import "./components/card.css";
 
 /* -------------------------------------------------------- */
 /* Global Styles */
 /* -------------------------------------------------------- */
 
 * {
-  font-family: "Hellix TRIAL";
+  font-family: "Gravity";
   box-sizing: border-box;
-  background-color: var(--color-bg);
 }
 
 body {
+  background-color: var(--color-bg);
+  color: var(--color-txt-title);
+  margin: 0;
   display: flex;
   flex-direction: column;
-  height: 100vh;
-  margin: 0;
+  min-height: 100vh;
+  padding: 40px;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+  padding-bottom: 50px;
 }
 
 :root {
-  --color-primary: #4b164c;
-  --color-secondary: #dd88cf;
-  --color-bg: #fdf7fd;
-  --color-txt: #22172a;
+  --color-primary: #ebff57;
+  --color-secondary: #4e561f;
+  --color-tertiary: #d4e64e;
+  --color-bg: #1a1a1a;
+  --color-txt-title: #ffffff;
+  --color-txt-body: #1a1a1a;
 }
