--- a/components/card.css
+++ b/components/card.css
@@ -1,50 +1,59 @@
-@import "./styles.css";
-
-.card {
-  margin: 20px 30px;
-  padding: 3% 20px;
-  scroll-margin-top: 100px;
-  border-radius: 20px;
-  position: relative;
-  background-color: #ebff57;
+.card-list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
 
-.cta_button {
-  background-color: #000000;
-  color: #ebff57;
-  padding: 10px 20px 10px 20px;
-  border-style: none;
+.card {
+  background-color: var(--color-primary);
+  color: var(--color-txt-body);
   border-radius: 32px;
-  text-align: center;
-  font-size: 16px;
-  font-weight: normal;
-  position: absolute;
-  bottom: 10px;
-  right: 10px;
+  padding: 20px 20px 24px 24px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.card-title {
+  font-size: 32px;
+  margin: 0;
 }
 
 .card_bookmark {
-  background-color: #d4e64e;
-  border: 2px solid var(--color-primary);
-  padding: 10px 12px;
-  border-radius: 60px;
-  position: absolute;
-  top: -25px;
-  right: 10px;
+  border: none;
+  background-color: var(--color-primary);
+  align-self: end;
+}
+
+.card-text {
+  font-size: 16px;
+  margin: 0;
 }
 
 .tags {
-  background-color: #d4e64e;
-  color: #000000;
-  display: inline-block;
-  padding: 8px 12px 8px 12px;
-  border-radius: 8px;
-  text-align: center;
-  font-size: 11px;
-  font-weight: 500;
+  display: flex;
+  gap: 8px;
 }
 
-p {
-  background-color: #ebff57;
-  color: #454c1a;
+.tag {
+  background-color: var(--color-tertiary);
+  color: var(--color-txt-body);
+  font-size: 12px;
+  padding: 5px 10px;
+  border-radius: 20px;
+}
+
+.details-button {
+  align-self: flex-end;
+  background-color: var(--color-bg);
+  color: var(--color-txt-title);
+  border: none;
+  border-radius: 32px;
+  padding: 10px 20px 10px 20px;
+  font-size: 16px;
+}
+
+.details-button:hover {
+  background-color: var(--color-secondary);
 }
