--- a/components/header.css
+++ b/components/header.css
@@ -1,10 +1,14 @@
-@import "./styles.css";
-
 header {
   background-color: var(--color-bg);
   padding: 10px;
   position: sticky;
   top: 0px;
   width: 100%;
-  z-index: 2;
+  z-index: 1;
+}
+
+h4 {
+  font-size: 24px;
+  text-align: center;
+  color: var(--color-txt-title);
 }
