--- a/components/header.css
+++ b/components/header.css
@@ -1,6 +1,6 @@
 header {
   background-color: var(--color-bg);
-  padding: 10px;
+  padding: 5px 0px;
   position: sticky;
   top: 0px;
   width: 100%;
@@ -11,4 +11,5 @@ h4 {
   font-size: 24px;
   text-align: center;
   color: var(--color-txt-title);
+  margin: 20px 20px;
 }
