--- a/components/card.css
+++ b/components/card.css
@@ -1,8 +1,9 @@
-.card-list {
+.cards-section {
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding-bottom: 80px;
 }
 
 .card {
@@ -14,34 +15,29 @@
   flex-direction: column;
 }
 
-.card__title {
+.card h2 {
+  margin: 15px 0 15px;
   font-size: 28px;
-  margin-top: 15px;
-  margin-bottom: 20px;
   color: var(--color-secondary);
 }
 
-.card__bookmark {
-  border: none;
-  background-color: var(--color-primary);
-  align-self: end;
-}
-
-.card__answer {
-  font-size: px;
+.card h3 {
+  font-size: 16px;
   font-style: italic;
+  margin: 0 0 15px;
   color: var(--color-secondary);
-  margin-top: 0;
-  display: none;
 }
 
-.card__tags {
-  display: flex;
-  gap: 8px;
-  margin-bottom: 15px;
+.tag-container {
+  display: flex; /* Keep the tags in a row */
+  flex-wrap: wrap; /* Allow wrapping */
+  gap: 5px; /* Space between tags */
+  list-style: none; /* Remove default bullet points */
+  padding: 0; /* Remove default padding */
+  margin: 0px 0 20px; /* Remove default margin */
 }
 
-.card__tag {
+.tag-container .tag {
   background-color: var(--color-tertiary);
   color: var(--color-txt-body);
   font-size: 12px;
@@ -49,7 +45,12 @@
   border-radius: 20px;
 }
 
-.card__cta-button {
+.answer {
+  font-style: italic;
+  color: gray;
+}
+
+.show-answer-btn {
   align-self: flex-end;
   background-color: var(--color-bg);
   color: var(--color-txt-title);
@@ -57,8 +58,9 @@
   border-radius: 32px;
   padding: 10px 20px 10px 20px;
   font-size: 16px;
+  width: 140px;
 }
 
-.card__cta-button:hover {
+.show-answer-btn:hover {
   background-color: var(--color-secondary);
 }
