--- a/components/card.css
+++ b/components/card.css
@@ -15,6 +15,19 @@
   flex-direction: column;
 }
 
+.card img {
+  display: block;
+  margin-left: auto;
+  border: none;
+  align-self: end;
+  background-color: var(--color-tertiary);
+  border-radius: 40px;
+}
+
+.card img:hover {
+  background-color: #c2d81f;
+}
+
 .card h2 {
   margin: 15px 0 15px;
   font-size: 28px;
