add form + styling

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 @import "./components/footer.css";
 @import "./components/header.css";
 @import "./components/card.css";
+@import "./components/form.css";
 @import "./components/toggle.css";
 @import "./components/bookmarks.css";
 @import "./components/profile_card.css";
