--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ main {
   --color-primary: #ebff57;
   --color-secondary: #4e561f;
   --color-tertiary: #d4e64e;
-  --color-bg: #1a1a1a;
+  --color-bg: #222223;
   --color-txt-title: #ffffff;
   --color-txt-body: #1a1a1a;
 }
